# vibenalytics-security

./: .gitignore  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs  security.rs  transcripts.rs
original/: security-metrics.html  security_analysis.py  security_report.json  security_report.md
ui/: report.json  security-metrics-dev-brand-sections.html  security-metrics.html
