[package]
name = "vibenalytics-security"
version = "0.1.0"
edition = "2021"
description = "Security-focused transcript analysis for Claude Code"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
